--- a/style.css
+++ b/style.css
@@ -9,6 +9,83 @@ body {
   font-family: "Inter", sans-serif;
 }
 
+h1 {
+  font-size: 80px;
+  font-weight: 400;
+  color: #000000;
+  text-transform: uppercase;
+}
+@media (max-width: 1440px) {
+  h1 {
+    font-size: 64px;
+  }
+}
+@media (max-width: 500px) {
+  h1 {
+    font-size: 48px;
+  }
+}
+
+h2 {
+  font-size: 40px;
+  font-weight: 400;
+  color: #000000;
+  text-transform: uppercase;
+}
+@media (max-width: 1440px) {
+  h2 {
+    font-size: 36px;
+  }
+}
+@media (max-width: 768px) {
+  h2 {
+    font-size: 32px;
+  }
+}
+@media (max-width: 500px) {
+  h2 {
+    font-size: 22px;
+  }
+}
+
+h3 {
+  font-size: 26px;
+  font-weight: 300;
+  color: #656565;
+  text-transform: uppercase;
+}
+@media (max-width: 1440px) {
+  h3 {
+    font-size: 24px;
+  }
+}
+@media (max-width: 1024px) {
+  h3 {
+    font-size: 22px;
+  }
+}
+@media (max-width: 768px) {
+  h3 {
+    font-size: 20px;
+  }
+}
+@media (max-width: 500px) {
+  h3 {
+    font-size: 16px;
+  }
+}
+
+h4 {
+  font-size: 24px;
+  font-weight: 300;
+  color: #000000;
+}
+@media (max-width: 1440px) {
+  h4 {
+    font-size: 20px;
+  }
+}
+
 .header {
   width: 100%;
   height: 64px;
@@ -17,6 +94,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  position: fixed;
 }
 .header__logo {
   height: 40px;
@@ -108,13 +186,14 @@ body {
   padding: 4px;
   margin-top: 14px;
   position: relative;
+  z-index: 3;
 }
 .header__burger span {
   width: 32px;
   height: 32px;
   position: absolute;
-  top: 3px;
-  left: 3px;
+  top: 4px;
+  left: 4px;
   transition: transform 0.1806s cubic-bezier(0.04, 0.04, 0.12, 0.96);
 }
 .header__burger span:before {
@@ -134,6 +213,53 @@ body {
   bottom: 14px;
   transform: translateY(3px);
 }
+.header__burger--close span:nth-child(1) {
+  transform: rotate(45deg) translateY(1px);
+}
+.header__burger--close span:nth-child(2) {
+  transform: rotate(-45deg) translateY(-1px);
+}
+.header__burger--close span:nth-child(1)::before, .header__burger--close span:nth-child(2)::before {
+  transform: none;
+  transition: transform 0.1806s cubic-bezier(0.04, 0.04, 0.12, 0.96);
+}
+.header__burger--close span:nth-child(1), .header__burger--close span:nth-child(2) {
+  transition: transform 0.3192s cubic-bezier(0.04, 0.04, 0.12, 0.96) 0.1008s;
+}
+.header__screen {
+  display: none;
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  background-color: #f1f1f1;
+  z-index: 2;
+  opacity: 0;
+}
+.header__contacts {
+  display: flex;
+  position: absolute;
+  bottom: 40px;
+  flex-direction: row;
+  flex-wrap: wrap;
+  z-index: 2;
+  opacity: 0;
+}
+.header__contacts p {
+  font-size: 22px;
+  font-weight: 400;
+  color: #000000;
+}
+.header__contacts p:nth-child(1) {
+  width: 100%;
+  margin-bottom: 24px;
+}
+.header__contacts p:nth-child(2) {
+  width: auto;
+}
+.header__contacts p:nth-child(3) {
+  width: 280px;
+  margin-left: 64px;
+}
 
 @media (max-width: 1440px) {
   .header__list {
@@ -144,8 +270,21 @@ body {
   .header {
     padding: 0 48px;
   }
-  .header__list {
+  .header__nav {
     display: none;
+    position: absolute;
+    opacity: 0;
+    z-index: 3;
+    margin-top: 16px;
+  }
+  .header__list {
+    flex-direction: column;
+    grid-gap: 24px;
+  }
+  .header__link {
+    color: #000000;
+    font-size: 32px;
+    font-weight: 500;
   }
   .header__phone {
     display: none;
@@ -157,6 +296,13 @@ body {
 @media (max-width: 768px) {
   .header {
     padding: 0 32px;
+  }
+  .header__contacts {
+    flex-direction: column;
+  }
+  .header__contacts p:nth-child(3) {
+    margin-left: 0px;
+    margin-top: 24px;
   }
 }
 @media (max-width: 500px) {
