--- a/style.scss
+++ b/style.scss
@@ -101,6 +101,11 @@ h4 {
 
     &__nav {
         margin-top: 24px;
+
+        @media (min-width: 1440px) {
+            display: block;
+            opacity: 1;
+        }
     }
 
     &__list {
@@ -114,6 +119,7 @@ h4 {
         text-decoration: none;
         color: $dark-gray;
         font-weight: 400;
+        overflow: hidden;
 
 
         &--effect-1 {
@@ -315,7 +321,6 @@ h4 {
         &__nav {
             display: none;
             position: absolute;
-            opacity: 0;
             z-index: 3;
             margin-top: 16px;
         }
