--- a/style.scss
+++ b/style.scss
@@ -22,15 +22,23 @@ body {
     font-family: "Inter", sans-serif;
 }
 
+::selection {
+    background: $green;
+    color: #fff;
+}
+
 h1 {
     font-size: 80px;
     font-weight: 400;
+    line-height: 100%;
+    letter-spacing: -0.04em;
     color: $black;
     text-transform: uppercase;
 
     @media (max-width: $bp-l) {
         font-size: 64px;
     }
+
     @media (max-width: $bp-s) {
         font-size: 48px;
     }
@@ -39,15 +47,18 @@ h1 {
 h2 {
     font-size: 40px;
     font-weight: 400;
+    letter-spacing: -0.04em;
     color: $black;
     text-transform: uppercase;
 
     @media (max-width: $bp-l) {
         font-size: 36px;
     }
+
     @media (max-width: $bp-ms) {
         font-size: 32px;
     }
+
     @media (max-width: $bp-s) {
         font-size: 22px;
     }
@@ -56,18 +67,23 @@ h2 {
 h3 {
     font-size: 26px;
     font-weight: 300;
+    line-height: 125%;
+    letter-spacing: -0.04em;
     color: $dark-gray;
     text-transform: uppercase;
 
     @media (max-width: $bp-l) {
         font-size: 24px;
     }
+
     @media (max-width: $bp-m) {
         font-size: 22px;
     }
+
     @media (max-width: $bp-ms) {
         font-size: 20px;
     }
+
     @media (max-width: $bp-s) {
         font-size: 16px;
     }
@@ -83,9 +99,17 @@ h4 {
     }
 }
 
+p {
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 135%;
+    color: $dark-gray;
+}
+
 .header {
     width: 100%;
     height: 64px;
+    top: 0;
     background-color: $white-opacity;
     padding: 0 64px;
     display: flex;
@@ -101,11 +125,6 @@ h4 {
 
     &__nav {
         margin-top: 24px;
-
-        @media (min-width: 1440px) {
-            display: block;
-            opacity: 1;
-        }
     }
 
     &__list {
@@ -113,14 +132,18 @@ h4 {
         display: flex;
         flex-direction: row;
         grid-gap: 64px;
+
+
+        & li {
+            overflow: hidden;
+        }
     }
 
     &__link {
         text-decoration: none;
         color: $dark-gray;
         font-weight: 400;
-        overflow: hidden;
-
+        display: block;
 
         &--effect-1 {
             transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
@@ -239,22 +262,23 @@ h4 {
             }
 
         }
+
         &--close {
             span {
                 &:nth-child(1) {
                     transform: rotate(45deg) translateY(1px);
                 }
-    
+
                 &:nth-child(2) {
                     transform: rotate(-45deg) translateY(-1px);
                 }
-    
+
                 &:nth-child(1)::before,
                 &:nth-child(2)::before {
                     transform: none;
                     transition: transform .1806s cubic-bezier(.04, .04, .12, .96);
                 }
-    
+
                 &:nth-child(1),
                 &:nth-child(2) {
                     transition: transform .3192s cubic-bezier(.04, .04, .12, .96) .1008s;
@@ -263,7 +287,7 @@ h4 {
         }
     }
 
-    
+
 
     &__screen {
         display: none;
@@ -276,30 +300,35 @@ h4 {
     }
 
     &__contacts {
-        display: flex;
+        display: none;
         position: absolute;
         bottom: 40px;
         flex-direction: row;
         flex-wrap: wrap;
         z-index: 2;
-        opacity: 0;
 
-
-        & p {
-            font-size: 22px;
-            font-weight: 400;
-            color: $black;
+        & span {
+            overflow: hidden;
 
             &:nth-child(1) {
                 width: 100%;
                 margin-bottom: 24px;
             }
+
             &:nth-child(2) {
-               width: auto; 
+                width: auto;
             }
+
             &:nth-child(3) {
                 width: 280px;
                 margin-left: 64px;
+            }
+
+            & p {
+                font-size: 22px;
+                font-weight: 400;
+                color: $black;
+                display: block;
             }
         }
     }
@@ -353,7 +382,7 @@ h4 {
         &__contacts {
             flex-direction: column;
 
-            & p:nth-child(3) {
+            & span:nth-child(3) {
                 margin-left: 0px;
                 margin-top: 24px;
             }
@@ -364,5 +393,65 @@ h4 {
 @media (max-width: $bp-s) {
     .header {
         padding: 0 16px;
+    }
+}
+
+.hero {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    position: static;
+    margin-top: 96px;
+
+    &__sec-1 {
+        width: 50%;
+        padding-left: 64px;
+        align-content: end;
+        padding-bottom: 6px;
+    }
+
+    &__text {
+        max-width: 304px;
+        text-align: justify;
+    }
+
+    &__sec-2 {
+        width: 50%;
+        height: auto;
+        padding-left: 16px;
+        padding-right: 64px;
+    }
+
+    &__title {
+        margin-top: 32px;
+    }
+
+    &__slider {
+        width: 100%;
+        height: 400px;
+        position: relative;
+        overflow: hidden;
+        cursor: grab;
+        margin-top: 40px;
+    }
+
+    &__wrapper {
+        width: auto;
+        height: auto;
+        position: absolute;
+        display: flex;
+        flex-direction: row;
+        grid-gap: 24px;
+    }
+
+    &__item {
+        width: 200px;
+        height: 200px;
+        background-color: #e3e3e3;
+
+        &--focus {
+            width: 400px;
+            height: 400px;
+        }
     }
 }
