--- a/style.css
+++ b/style.css
@@ -7,11 +7,57 @@
 body {
   background-color: #f1f1f1;
   font-family: "Inter", sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
-::-moz-selection {
-  background: #5fbe47;
-  color: #fff;
+@media (max-width: 500px) {
+  .header {
+    order: 1;
+  }
+  .hero {
+    order: 2;
+  }
+  .about {
+    order: 3;
+  }
+  .reasons {
+    order: 5;
+  }
+  .catalogue {
+    order: 4;
+  }
+  .benefits {
+    order: 6;
+  }
+  .feedback {
+    order: 7;
+  }
+  .footer {
+    order: 8;
+  }
+}
+.empty {
+  height: 100vh;
+}
+
+.container {
+  padding: 0 64px;
+}
+@media (max-width: 1024px) {
+  .container {
+    padding: 0 48px;
+  }
+}
+@media (max-width: 768px) {
+  .container {
+    padding: 0 32px;
+  }
+}
+@media (max-width: 500px) {
+  .container {
+    padding: 0 16px;
+  }
 }
 
 ::selection {
@@ -20,7 +66,7 @@ body {
 }
 
 h1 {
-  font-size: 80px;
+  font-size: 5.2vw;
   font-weight: 400;
   line-height: 100%;
   letter-spacing: -0.04em;
@@ -28,6 +74,16 @@ h1 {
   text-transform: uppercase;
 }
 @media (max-width: 1440px) {
+  h1 {
+    font-size: 5vw;
+  }
+}
+@media (max-width: 1024px) {
+  h1 {
+    font-size: 72px;
+  }
+}
+@media (max-width: 768px) {
   h1 {
     font-size: 64px;
   }
@@ -82,6 +138,7 @@ h3 {
 @media (max-width: 768px) {
   h3 {
     font-size: 20px;
+    letter-spacing: 0;
   }
 }
 @media (max-width: 500px) {
@@ -92,7 +149,7 @@ h3 {
 
 h4 {
   font-size: 24px;
-  font-weight: 300;
+  font-weight: 400;
   color: #000000;
 }
 @media (max-width: 1440px) {
@@ -113,11 +170,14 @@ p {
   height: 64px;
   top: 0;
   background-color: rgba(241, 241, 241, 0.9);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
   padding: 0 64px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   position: fixed;
+  z-index: 20;
 }
 .header__logo {
   height: 40px;
@@ -213,7 +273,7 @@ p {
   padding: 4px;
   margin-top: 14px;
   position: relative;
-  z-index: 3;
+  z-index: 21;
 }
 .header__burger span {
   width: 32px;
@@ -259,8 +319,9 @@ p {
   width: 100%;
   height: 100vh;
   background-color: #f1f1f1;
-  z-index: 2;
+  z-index: 20;
   opacity: 0;
+  left: 0;
 }
 .header__contacts {
   display: none;
@@ -268,7 +329,7 @@ p {
   bottom: 40px;
   flex-direction: row;
   flex-wrap: wrap;
-  z-index: 2;
+  z-index: 20;
 }
 .header__contacts span {
   overflow: hidden;
@@ -303,7 +364,7 @@ p {
   .header__nav {
     display: none;
     position: absolute;
-    z-index: 3;
+    z-index: 21;
     margin-top: 16px;
   }
   .header__list {
@@ -317,6 +378,9 @@ p {
   }
   .header__phone {
     display: none;
+  }
+  .header__screen {
+    padding-left: 48px;
   }
   .header__burger {
     display: block;
@@ -333,60 +397,840 @@ p {
     margin-left: 0px;
     margin-top: 24px;
   }
+  .header__screen {
+    padding-left: 32px;
+  }
 }
 @media (max-width: 500px) {
   .header {
     padding: 0 16px;
   }
+  .header__screen {
+    padding-left: 16px;
+  }
 }
 .hero {
+  height: 100vh;
+  width: auto;
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  position: static;
-  margin-top: 96px;
-}
-.hero__sec-1 {
-  width: 50%;
-  padding-left: 64px;
-  align-content: end;
-  padding-bottom: 6px;
+  flex-direction: column;
+  justify-content: end;
+  padding-bottom: 40px;
 }
 .hero__text {
-  max-width: 304px;
-  text-align: justify;
+  margin-bottom: 16px;
 }
-.hero__sec-2 {
+.hero__title {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border-bottom: 1px solid #656565;
+  padding-bottom: 24px;
+}
+.hero__logo {
+  width: 3.91vw;
+  height: auto;
+}
+.hero__content {
+  display: flex;
+  flex-direction: row;
+  margin-top: 40px;
+}
+.hero__slider {
+  width: 50% !important;
+  height: 272px;
+  padding-right: 16px;
+}
+.hero__item {
+  overflow: hidden;
+  margin-right: 32px;
+}
+.hero__item img {
+  object-fit: contain;
+  width: 100%;
+  -webkit-user-drag: none;
+  pointer-events: none;
+}
+.hero__subtitle {
   width: 50%;
   height: auto;
   padding-left: 16px;
-  padding-right: 64px;
 }
-.hero__title {
-  margin-top: 32px;
+.hero__subtitle h3 {
+  text-indent: 0;
 }
-.hero__slider {
-  width: 100%;
-  height: 400px;
-  position: relative;
-  overflow: hidden;
-  cursor: grab;
+.hero h1 {
+  display: inline-block;
+}
+
+@media (max-width: 1024px) {
+  .hero__title {
+    align-items: start;
+  }
+  .hero__logo {
+    width: 56px;
+    margin-top: 4px;
+  }
+  .hero h1 {
+    max-width: 90%;
+  }
+  .hero__content {
+    flex-direction: column;
+  }
+  .hero__slider {
+    width: 100% !important;
+    padding-right: 0;
+  }
+  .hero__subtitle {
+    width: 100%;
+    padding-left: 0;
+    margin-top: 32px;
+  }
+}
+@media (max-width: 768px) {
+  .hero {
+    display: block;
+    padding-top: 120px;
+    height: auto;
+  }
+  .hero__logo {
+    width: 48px;
+    margin-top: 6px;
+  }
+}
+@media (max-width: 500px) {
+  .hero {
+    padding-top: 160px;
+    padding-bottom: 0;
+  }
+  .hero__logo {
+    display: none;
+  }
+  .hero h1 {
+    max-width: 100%;
+  }
+  .hero__content {
+    margin-top: 32px;
+  }
+}
+.about {
+  margin-top: 200px;
+}
+.about__button {
   margin-top: 40px;
+  margin-left: calc(50% + 16px);
 }
-.hero__wrapper {
-  width: auto;
-  height: auto;
-  position: absolute;
+.about__images {
+  margin-top: 56px;
   display: flex;
   flex-direction: row;
-  grid-gap: 24px;
 }
-.hero__item {
-  width: 200px;
-  height: 200px;
+.about__images-wrapper {
+  width: 50%;
+  height: auto;
+}
+.about__images-wrapper-2 {
+  padding-left: 16px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: start;
+}
+.about__image {
+  -webkit-user-drag: none;
+  pointer-events: none;
+}
+.about__image-1 {
+  width: 240px;
+  height: 240px;
+}
+.about__image-2 {
+  width: 75%;
+  height: auto;
+}
+.about__image-3 {
+  width: 20%;
+  height: auto;
+}
+
+@media (max-width: 1440px) {
+  .about__image-1 {
+    width: 160px;
+    height: 160px;
+  }
+}
+@media (max-width: 1024px) {
+  .about__image-2 {
+    width: 100%;
+  }
+  .about__image-3 {
+    display: none;
+  }
+}
+@media (max-width: 768px) {
+  .about__button {
+    margin-left: 0;
+  }
+  .about__images-wrapper-1 {
+    width: 35%;
+  }
+  .about__images-wrapper-2 {
+    width: 65%;
+  }
+}
+@media (max-width: 500px) {
+  .about {
+    margin-top: 150px;
+  }
+  .about__images-wrapper-1 {
+    display: none;
+  }
+  .about__images-wrapper-2 {
+    padding: 0;
+    width: 100%;
+  }
+  .about__image-2 {
+    height: 320px;
+    object-fit: cover;
+  }
+}
+.text-wrapper {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+}
+.text-wrapper__name {
+  width: 50%;
+  height: auto;
+}
+.text-wrapper__name p {
+  font-weight: 400;
+  text-transform: uppercase;
+}
+.text-wrapper__title {
+  width: 50%;
+  height: auto;
+  padding-left: 16px;
+}
+.text-wrapper__subtitle {
+  width: 100%;
+  height: auto;
+  margin-top: 24px;
+}
+.text-wrapper__subtitle h3 {
+  text-indent: calc(50% + 16px);
+}
+.text-wrapper__empty {
+  width: 50%;
+  height: auto;
+}
+.text-wrapper__paragraph {
+  width: 50%;
+  height: auto;
+  padding-left: 16px;
+  margin-top: 24px;
+}
+.text-wrapper__paragraph p {
+  max-width: 304px;
+  text-align: justify;
+}
+
+@media (max-width: 768px) {
+  .text-wrapper {
+    flex-direction: column;
+  }
+  .text-wrapper__name {
+    width: 100%;
+  }
+  .text-wrapper__title {
+    width: 100%;
+    margin-top: 16px;
+    padding: 0;
+  }
+  .text-wrapper__subtitle h3 {
+    text-indent: 0;
+  }
+  .text-wrapper__empty {
+    display: none;
+  }
+  .text-wrapper__paragraph {
+    width: 100%;
+    padding: 0;
+    margin-top: 40px;
+  }
+  .text-wrapper__paragraph p {
+    max-width: none;
+    text-align: left;
+  }
+}
+@media (max-width: 500px) {
+  .text-wrapper__subtitle {
+    margin-top: 40px;
+  }
+  .text-wrapper__paragraph {
+    display: none;
+  }
+}
+.button {
+  width: auto;
+  height: 40px;
+  background: none;
+  border: 1px solid #000000;
+  display: flex;
+  flex-direction: row;
+  cursor: pointer;
+  transition: all 0.3s ease-out;
+}
+.button__text {
+  display: inline-block;
+  color: #000000;
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: 300;
+  line-height: 38px;
+  padding-left: 12px;
+  padding-right: 16px;
+}
+.button__square {
+  height: 100%;
+  width: 40px;
+  background-color: #000000;
+  align-items: center;
+  padding-top: 9px;
+}
+.button__square svg path {
+  transition: all 0.3s ease-out;
+}
+.button:hover {
+  background: #5fbe47;
+}
+.button:hover .button__square svg path {
+  fill: #5fbe47;
+}
+
+.reasons {
+  margin-top: 200px;
+  width: 100%;
+}
+.reasons__blocks {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  grid-gap: 32px;
+  margin-top: 64px;
+}
+.reasons__block {
+  width: calc(25% - 24px);
+  height: 440px;
+  background-color: #e3e3e3;
+  padding: 40px 32px 32px 32px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.reasons__block-digit {
+  width: 100%;
+  display: inline-block;
+  border-top: 1px solid #656565;
+  padding-top: 32px;
+  color: #000000;
+  font-size: 80px;
+  font-weight: 400;
+  line-height: 100%;
+}
+
+@media (max-width: 1440px) {
+  .reasons__blocks {
+    row-gap: 40px;
+  }
+  .reasons__block {
+    height: 320px;
+    padding: 24px 16px 24px 16px;
+  }
+  .reasons__block-digit {
+    font-size: 56px;
+  }
+}
+@media (max-width: 1024px) {
+  .reasons__block {
+    width: calc(50% - 16px);
+    height: 320px;
+  }
+}
+@media (max-width: 768px) {
+  .reasons__block {
+    width: 100%;
+    height: 280px;
+  }
+}
+@media (max-width: 500px) {
+  .reasons {
+    margin-top: 150px;
+  }
+  .reasons__blocks {
+    margin-top: 40px;
+  }
+  .reasons__block {
+    height: 320px;
+  }
+  .reasons__block-digit {
+    font-size: 48px;
+    padding-top: 24px;
+  }
+}
+.catalogue {
+  margin-top: 200px;
+}
+.catalogue__cards {
+  margin-top: 104px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  grid-gap: 32px;
+  row-gap: 80px;
+}
+.catalogue__item {
+  width: calc(25% - 24px);
+  height: auto;
+}
+.catalogue__image {
+  width: 100%;
+  height: auto;
+}
+.catalogue__list {
+  margin-top: 48px;
+  padding-left: 24px;
+}
+.catalogue__product {
+  display: flex;
+  flex-direction: column;
+  margin-top: 32px;
+}
+.catalogue__product b {
+  font-weight: 500;
+  color: #000000;
+}
+.catalogue__links {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  grid-gap: 24px;
+  margin-top: 4px;
+}
+.catalogue__link {
+  font-size: 16px;
+  text-decoration: none;
+  color: #656565;
+  font-weight: 300;
+  line-height: 135%;
+  transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition-duration: 400ms;
+  transition-property: color;
+}
+.catalogue__link:focus, .catalogue__link:hover {
+  color: #000000;
+}
+
+@media (max-width: 1440px) {
+  .catalogue__list {
+    padding-left: 0;
+  }
+}
+@media (max-width: 1024px) {
+  .catalogue__item {
+    width: calc(50% - 16px);
+  }
+}
+@media (max-width: 768px) {
+  .catalogue__cards {
+    row-gap: 88px;
+  }
+  .catalogue__item {
+    width: 100%;
+  }
+  .catalogue__list {
+    margin-top: 40px;
+  }
+}
+@media (max-width: 500px) {
+  .catalogue {
+    margin-top: 150px;
+  }
+  .catalogue__cards {
+    margin-top: 56px;
+  }
+  .catalogue__list {
+    margin-top: 24px;
+  }
+}
+.benefits {
+  margin-top: 200px;
+}
+.benefits__slider {
+  margin-top: 72px;
+  cursor: grab;
+}
+.benefits__item {
+  display: flex !important;
+  flex-direction: row;
+  width: auto;
+  height: auto;
+  margin-right: 40px;
+}
+.benefits__left {
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+}
+.benefits__index {
+  width: 32px;
+  height: 32px;
+  background-color: #5fbe47;
+  line-height: 32px;
+  text-align: center;
+}
+.benefits__image {
+  width: 520px;
+  height: 400px;
+  object-fit: cover;
+  -webkit-user-drag: none;
+  pointer-events: none;
+}
+.benefits__right {
+  width: 616px;
+  padding: 32px 48px;
+  height: 100%;
+}
+.benefits__right p {
+  margin-top: 24px;
+}
+.benefits__progress {
+  position: relative;
+  margin-top: 112px;
+  height: 4px;
+  width: 100%;
   background-color: #e3e3e3;
 }
-.hero__item--focus {
-  width: 400px;
-  height: 400px;
+.benefits__progress-status {
+  position: absolute;
+  width: 0;
+  height: 100%;
+  background-color: #5fbe47;
+}
+
+@media (max-width: 1440px) {
+  .benefits__image {
+    width: 480px;
+    height: 360px;
+  }
+  .benefits__right {
+    width: 480px;
+  }
+}
+@media (max-width: 1024px) {
+  .benefits__image {
+    width: 320px;
+    height: 360px;
+  }
+  .benefits__right {
+    width: 400px;
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+}
+@media (max-width: 768px) {
+  .benefits {
+    margin-top: 150px;
+  }
+  .benefits__item {
+    width: calc(100vw - 64px);
+    flex-direction: column;
+  }
+  .benefits__image {
+    width: 100%;
+    height: 360px;
+  }
+  .benefits__right {
+    width: 100%;
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+}
+@media (max-width: 500px) {
+  .benefits__item {
+    width: calc(100vw - 32px);
+  }
+  .benefits__image {
+    height: 240px;
+  }
+  .benefits__progress {
+    margin-top: 80px;
+  }
+}
+.feedback {
+  display: flex;
+  flex-direction: row;
+  margin-top: 150px;
+}
+.feedback__empty {
+  width: 50%;
+  height: auto;
+}
+.feedback__empty p {
+  font-weight: 400;
+  text-transform: uppercase;
+}
+.feedback__wrapper {
+  width: 50%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  padding-left: 16px;
+}
+.feedback__paragraph {
+  max-width: 400px;
+  margin-top: 24px;
+}
+.feedback__form {
+  margin-top: 48px;
+  max-width: 688px;
+}
+.feedback__group {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  row-gap: 24px;
+}
+.feedback__input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid #656565;
+  background: none;
+  font-size: 16px;
+  font-weight: 400;
+  color: #656565;
+  padding-left: 16px;
+  outline: none;
+  -webkit-appearance: none;
+  -webkit-border-radius: 0;
+}
+.feedback__input:focus {
+  color: #000000;
+}
+.feedback__input:focus + .feedback__form-status {
+  transform: scaleY(1);
+}
+.feedback__input:valid {
+  border: 1px solid #5fbe47;
+  color: #000000;
+}
+.feedback__input:valid + .feedback__form-status {
+  transform: scaleY(1);
+  background-color: #5fbe47;
+}
+.feedback__input-wrapper {
+  position: relative;
+  width: 50%;
+}
+.feedback__input-wrapper:nth-child(odd) {
+  padding-right: 20px;
+}
+.feedback__input-wrapper:nth-child(even) {
+  padding-left: 20px;
+}
+.feedback__input-wrapper:nth-child(odd) .feedback__form-status {
+  right: 20px;
+}
+.feedback__form-status {
+  position: absolute;
+  width: 12px;
+  height: 12px;
+  background-color: #656565;
+  right: 0;
+  top: -12px;
+  transition: all 0.2s ease-out;
+  transform: scaleY(0);
+  transform-origin: bottom;
+}
+.feedback__radio-1 {
+  margin-top: 32px;
+}
+.feedback__radio-2 {
+  margin-top: 8px;
+}
+.feedback__textarea {
+  width: 100%;
+  height: 160px;
+  resize: none;
+  margin-top: 32px;
+  outline: none;
+  border: 1px solid #656565;
+  background: none;
+  color: #000000;
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  padding: 8px 16px;
+}
+.feedback__checkbox {
+  margin-top: 56px;
+}
+.feedback__button {
+  margin-top: 24px;
+}
+
+@media (max-width: 1024px) {
+  .feedback__input-wrapper {
+    width: 100%;
+  }
+  .feedback__input-wrapper:nth-child(odd) {
+    padding-right: 0;
+  }
+  .feedback__input-wrapper:nth-child(even) {
+    padding-left: 0;
+  }
+  .feedback__input-wrapper:nth-child(odd) .feedback__form-status {
+    right: 0;
+  }
+}
+@media (max-width: 768px) {
+  .feedback {
+    flex-direction: column;
+  }
+  .feedback__empty {
+    width: 100%;
+  }
+  .feedback__wrapper {
+    width: 100%;
+    padding: 0;
+    margin-top: 16px;
+  }
+  .feedback__form {
+    margin-top: 24px;
+  }
+}
+.radio-btn {
+  display: block;
+  position: relative;
+  padding-left: 32px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 400;
+  color: #656565;
+  text-transform: uppercase;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.radio-btn__input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+.radio-btn__input:checked ~ .radio-btn__checkmark {
+  background-color: #5fbe47;
+  border: 1px solid #5fbe47;
+}
+.radio-btn__checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 16px;
+  width: 16px;
+  border: 1px solid #656565;
+}
+
+.footer {
+  margin-top: 150px;
+}
+.footer__info {
+  border-top: 1px solid #656565;
+  border-bottom: 1px solid #656565;
+  padding-top: 48px;
+  padding-bottom: 48px;
+  display: flex;
+  flex-direction: row;
+}
+.footer__phone {
+  display: inline-block;
+  width: 50%;
+  color: #000000;
+  text-decoration: none;
+}
+.footer__wrapper {
+  width: 50%;
+  padding-left: 16px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.footer__text {
+  display: flex;
+  flex-direction: column;
+}
+.footer__text p {
+  text-decoration: none;
+  color: #656565;
+}
+.footer__text b {
+  font-weight: 500;
+  color: #000000;
+}
+.footer__logo {
+  height: 40px;
+  width: auto;
+}
+.footer__bottom {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+
+@media (max-width: 1440px) {
+  .footer__logo {
+    display: none;
+  }
+  .footer__text:first-child {
+    margin-right: 40px;
+  }
+}
+@media (max-width: 768px) {
+  .footer__info {
+    flex-direction: column;
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+  .footer__wrapper {
+    width: 100%;
+    padding-left: 0;
+  }
+  .footer__phone {
+    width: 100%;
+    margin-bottom: 32px;
+  }
+  .footer__text:first-child {
+    margin-right: 40px;
+  }
+}
+@media (max-width: 768px) {
+  .footer__info {
+    flex-direction: column;
+  }
+  .footer__wrapper {
+    flex-direction: column;
+  }
+  .footer__text:first-child {
+    margin-bottom: 16px;
+  }
+  .footer__bottom {
+    flex-direction: column;
+  }
 }/*# sourceMappingURL=style.css.map */
